Fix navbar visibility in fade to black/white mode

--- a/src/style.less
+++ b/src/style.less
@@ -97,7 +97,7 @@ body {
         @media (min-width: 768px) {
             position: fixed;
             width: 100%;
-            z-index: 9999;
+            z-index: 9990;
         }
     }
 
@@ -106,7 +106,7 @@ body {
         @media (min-width: 768px) {
             position: sticky;
             width: 100%;
-            z-index: 9999;
+            z-index: 9990;
         }
     }
 
